# launcher_studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  fr.arnaudmichel.launcherstudio.yaml
assets/styles/: styles.css
data/: fr.arnaudmichel.launcherstudio.desktop  fr.arnaudmichel.launcherstudio.metainfo.xml
src/: app.rs  main.rs
src/domain/: desktop_entry.rs
src/services/: desktop_reader.rs  desktop_writer.rs  icon_service.rs  lucide_service.rs  mod.rs
src/ui/: dialogs.rs  mod.rs  state.rs  theme.rs
src/ui/components/: menu_bar.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
src/ui/editor/: entry_form.rs  icon_picker.rs  mod.rs  widgets.rs
src/ui/windows/: actions.rs  list_manager.rs  main_window.rs  mod.rs
