[package]
name = "launcher_studio"
version = "0.1.2"
edition = "2024"
description = "Launcher Studio: A GTK4 app for creating and managing .desktop files on Linux."
license = "MIT"
authors = ["Arnaud Michel <contact@arnaudmichel.fr>"]

[dependencies]
anyhow = "1.0.100"
gtk4 = "0.10.1"
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_6"] }
gio = "0.21.2"
directories = "6.0.0"
open = "5.3.3"

[package.metadata.deb]
maintainer = "Arnaud Michel <contact@arnaudmichel.fr>"
section = "utils"
priority = "optional"

license-file = ["LICENSE"]
depends = "libgtk-4-1, libadwaita-1-0"
extended-description = """Launcher Studio is a modern GTK4 application designed to simplify the creation and management of .desktop launcher files on Linux.

It provides an intuitive editor for application name, comment, executable path, icon, categories, keywords, MIME types, and startup options. An advanced raw source view allows direct inspection and editing of the underlying .desktop file.

Launcher Studio integrates natively with GNOME and Libadwaita, supporting both light and dark modes.
"""

assets = [
    # Desktop entry
    ["data/fr.arnaudmichel.launcherstudio.desktop", "/usr/share/applications/fr.arnaudmichel.launcherstudio.desktop", "644"],

    # AppStream metadata
    ["data/fr.arnaudmichel.launcherstudio.metainfo.xml", "/usr/share/metainfo/fr.arnaudmichel.launcherstudio.metainfo.xml", "644"],

    # Application icon (must match desktop + AppStream ID)
    ["assets/icons/fr.arnaudmichel.launcherstudio.png", "/usr/share/icons/hicolor/512x512/apps/fr.arnaudmichel.launcherstudio.png", "644"],

    # Symbolic icons
    ["assets/icons/launcher-studio-weather-night-symbolic.svg", "/usr/share/icons/hicolor/symbolic/apps/launcher-studio-weather-night-symbolic.svg", "644"],
    ["assets/icons/launcher-studio-weather-sunny-symbolic.svg", "/usr/share/icons/hicolor/symbolic/apps/launcher-studio-weather-sunny-symbolic.svg", "644"],
]
copyright = "© 2026 Arnaud Michel"
